# Lightshafts

./: .gitignore  CMakeLists.txt  Lightshafts.sln  README.md
Lightshafts/: Camera.cpp  Camera.h  GLUtilities.cpp  GLUtilities.h  Light.h  Lightshafts.vcxproj  Lightshafts.vcxproj.filters  Mesh.h  OBJLoader.cpp  OBJLoader.h  Particle.h  Shader.cpp  Shader.h  StringUtilities.cpp  UBOData.h  Window.cpp  Window.h  main.cpp
Lightshafts/Lightshafts/: Camera.cpp  GLUtilities.cpp  Lightshafts.vcxproj.filters  OBJLoader.cpp  OBJLoader.h  StringUtilities.h  Window.cpp
Lightshafts/Lightshafts/assets/shaders/: plain_normal.vert
Lightshafts/Lightshafts/x64/Debug/: vc141.idb
Lightshafts/assets/shaders/: add_scattering.frag  compute_scattering.frag  compute_scattering.vert  gbuffer.frag  gbuffer.vert  gbuffer_quad.frag  gbuffer_quad.vert  lightshaft.frag  lightshaft.vert  particle.frag  particle.vert  plain_normal.frag  plain_normal.vert  plain_normal2.frag  quad.frag  shadow.vert  test.frag  test.vert
Lightshafts/x64/Release/: Lightshafts.iobj  Lightshafts.ipdb
x64/Debug/assets/shaders/: add_scattering.frag  compute_scattering.frag  gbuffer.frag  gbuffer.vert  lightshaft.frag  quad.frag  quad.vert  shadow.vert
x64/Release/assets/shaders/: add_scattering.frag  gbuffer.frag  lightshaft.frag  particle.vert  shadow.vert
